guides/precise-prefix-cache-aware/gkegateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: infra-kv-events-inference-gateway
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    port: 80
    protocol: HTTP
