guides/precise-prefix-cache-aware/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    helm.sh/hook: post-install,post-upgrade
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.2.0
    helm.sh/chart: llm-d-modelservice-v0.2.7
  name: ms-kv-events-llm-d-modelservice
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra-kv-events-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: gaie-kv-events
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
